--- a/assets/reset.css
+++ b/assets/reset.css
@@ -21,6 +21,9 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+h1, h2, h3, h4, h5, h6, p {
+    color: #555;
+}
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
